# deleg

./: API.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
migrations/: 20260508_create_persons.sql  20260509_create_roles.sql  20260510_add_delegation_hours_to_roles.sql  20260511_add_dates_to_person_roles.sql
src/: db.rs  main.rs  models.rs  routes.rs
templates/: edit_person.html.tera  people.html.tera  roles.html.tera
