[package]
name = "deleg"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
