[package]
name = "deleg"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
